@@ -14,6 +14,7 @@
         <theme:scss file="theme/scss/buttons.scss" />
         <theme:scss file="theme/scss/grid.scss" />
         <theme:scss file="theme/scss/layout.scss" />
+        <theme:scss file="theme/scss/pagewrapper.scss" />
         <theme:scss file="theme/scss/contacts.scss" />
         <theme:scss file="theme/scss/content.scss" />
         <theme:scss file="theme/scss/pathbar.scss" />
