@@ -1,0 +1,27 @@
+$showpagewrapper: true !default;
+$content-border-size: 1px !default;
+$content-border-style: solid !default;
+$content-border-color: transparentize($gray, 50%) !default;
+
+@include declare-variables(showpagewrapper,
+                           content-border-size,
+                           content-border-style,
+                           content-border-color);
+
+@if $showpagewrapper {
+  #page-wrapper {
+    background-color: $content-bg-color;
+
+    @include borderradius(2 * $border-radius);
+
+    border: $content-border-size $content-border-style $content-border-color;
+
+    @include boxshadow(0px 0px 4px $content-border-size transparentize($content-border-color, 20%), 0px 0px 15px 7px transparentize($content-border-color, 40%), inset 0px 0px 10px 0 transparentize($content-border-color, 30%));
+
+    #ftw-footer {
+      @include borderradius-bottom-right(2 * $border-radius - $content-border-size);
+
+      @include borderradius-bottom-left(2 * $border-radius - $content-border-size);
+    }
+  }
+}
